<resources>
    <string name="app_name">Lifecycle</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="avatar">Avatar</string>
    <string name="age">age</string>
    <string name="address">address</string>
    <string name="title">title</string>
    <string name="age_placeholder">Age: %s</string>
    <string name="title_placeholder">Title: %s</string>

    <!-- !!!!!Remove after test!!!!! -->
    <string name="test_mail">Ada@mail.com</string>
    <string name="test_pass">1234</string>
    <string name="example_email_com">example@email.com</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <!-- !!!!!Remove after test!!!!! -->

</resources>